--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,11 +3,12 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #fafafa;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #f3eacd;
   color: #212121;
   line-height: 1.5;
+  
 }
 
 #search-box {
@@ -15,4 +16,39 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+  border: 3px solid blueviolet;
+  border-radius: 5px;
+}
+#search-box:hover,
+#search-box:focus {
+  border: 3px solid orange;
+}
+
+.country-cards {
+  list-style: none;
+}
+.country-title {
+  margin: 0 0 0 10px;
+  font-size: 22px;
+}
+.country-wrraper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.bold-wrraper {
+  font-size: 18px;
+  font-weight: 500;
+}
+.countries {
+  padding-top: 50px;
+  padding-left: 50px;
+}
+.main-title {
+  font-size: 25px;
+  color: rgb(141, 5, 5);
+  text-shadow: #f3eacd 2px 2px 0px, #c7b9b9 4px 4px 0px;
+}
+.country-list {
+  padding: 0;
 }
