--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,10 +5,12 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #f3eacd;
-  color: #212121;
+  color: #ffffff;
   line-height: 1.5;
-  
+  background-image: url('../images/selectBack.jpg') ;
+  background-color: #cccccc; /* Used if the image is unavailable */
+ background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: 2500px auto; /* Resize the background image to cover the entire container */
 }
 
 #search-box {
@@ -16,12 +18,12 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
-  border: 3px solid blueviolet;
-  border-radius: 5px;
+  border: 1px solid rgb(245, 245, 245);
+  border-radius: 3px;
 }
 #search-box:hover,
 #search-box:focus {
-  border: 3px solid orange;
+  border: 1px solid rgb(120, 165, 207);
 }
 
 .country-cards {
@@ -46,8 +48,8 @@ body {
 }
 .main-title {
   font-size: 25px;
-  color: rgb(141, 5, 5);
-  text-shadow: #f3eacd 2px 2px 0px, #c7b9b9 4px 4px 0px;
+  color: #c7b9b9;
+ 
 }
 .country-list {
   padding: 0;
